Eevee doesn't use integer node sockets #59501

Closed
opened 2018-12-17 17:42:32 +01:00 by Ben Morrison · 5 comments

Tested on
Windows 10, 64bit
2.80, 9149e89421, blender2.8, 2018-12-16

As the title says, integer node sockets (NodeSocketInt) on shader node groups, that work fine with Cycles, are not functioning in Eevee.

The attached file demonstrates the issue.
The node groups are functionally identical under Cycles but the integer version of the node group doesn't process the UV division in Eevee.

blender28_integer_node_sockets.blend

Tested on Windows 10, 64bit 2.80, 9149e894210, blender2.8, 2018-12-16 As the title says, integer node sockets (NodeSocketInt) on shader node groups, that work fine with Cycles, are not functioning in Eevee. The attached file demonstrates the issue. The node groups are functionally identical under Cycles but the integer version of the node group doesn't process the UV division in Eevee. [blender28_integer_node_sockets.blend](https://archive.blender.org/developer/F5982315/blender28_integer_node_sockets.blend)
Author

Added subscriber: @BenjaminMorrison

Added subscriber: @BenjaminMorrison
Member

Added subscriber: @JacquesLucke

Added subscriber: @JacquesLucke
Clément Foucault was assigned by Jacques Lucke 2018-12-17 17:50:55 +01:00
Member

Thanks for the report!

Thanks for the report!

This issue was referenced by bf9904ec80

This issue was referenced by bf9904ec8018db89a8775ef651fadb2ea52457f0

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#59501
No description provided.