source/blender/gpu/intern/gpu_codegen.c
@@ -1394,6 +1394,8 @@ static void gpu_node_input_link(GPUNode *node, GPUNodeLink *link, const eGPUType
 static const char *gpu_uniform_set_function_from_type(eNodeSocketDatatype type)
 {
 	switch (type) {
+		/* For now INT is supported as float. */
+		case SOCK_INT:
 		case SOCK_FLOAT:
 			return "set_value";
 		case SOCK_VECTOR:
