source/blender/nodes/shader/node_shader_util.c
@@ -102,6 +102,8 @@ void node_gpu_stack_from_data(struct GPUNodeStack *gs, int type, bNodeStack *ns)
 
 		if (type == SOCK_FLOAT)
 			gs->type = GPU_FLOAT;
+		else if (type == SOCK_INT)
+			gs->type = GPU_FLOAT; /* HACK: Support as float. */
 		else if (type == SOCK_VECTOR)
 			gs->type = GPU_VEC3;
 		else if (type == SOCK_RGBA)
